# Mahalanbois

./: CITATION.cff  LICENSE  README.md  mahalanbois7.5V.py  mahalanbois7.6V.py  mahalanboisV1.py  mahalanboisV2.py  mahalanboisV3.py  mahalanboisV4.py  pyproject.toml  requirements.txt
.arxiv_cache/: activation_functions_100.json  cat_cs_AI_OR_cat_cs_LG_300.json  transformer_architecture_100.json
.github/workflows/: lint.yml
research/: mahalanboisV3.5.py
